--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1755,7 +1755,7 @@ button,
       left: -3em;
       position: absolute;
       top: 0;
-      width: 1px; }
+      width: 0px; } /* disable borders around posts */
     .posts article:after {
       background: rgba(210, 215, 217, 0.75);
       bottom: -3em;
@@ -1764,7 +1764,9 @@ button,
       height: 1px;
       position: absolute;
       right: 0;
-      width: calc(100% + 6em); }
+      width: 0px;
+      /* width: calc(100% + 6em); disable borders around posts */
+      }
     .posts article > :last-child {
       margin-bottom: 0; }
     .posts article .image {
@@ -1812,7 +1814,9 @@ button,
           left: -2.25em; }
         .posts article:after {
           bottom: -2.25em;
-          width: calc(100% + 4.5em); }
+          /* width: calc(100% + 4.5em); OLD */
+          width: 0px;
+         }
         .posts article:nth-last-child(3) {
           margin-bottom: 4.5em; } }
   @media screen and (max-width: 480px) {
