--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,8 @@ h4 {
   font-size: 1.1em; }
 
 h5 {
-  font-size: 0.9em; }
+  font-size: 0.9em;
+  color: #919191; }
 
 h6 {
   font-size: 0.7em; }
